RISEified notebooks for presentation

--- a/ew2021/autotest.ipynb
+++ b/ew2021/autotest.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Automated testing of notebooks\n",
     "\n",
@@ -15,9 +19,21 @@
     "\n",
     "See Auto-Test in action here: [Go to hdlplayground index](../index.ipynb#Automated-notebook-tests)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Next [Conclusion](conclusion.ipynb)"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
