--- a/ew2021/conclusion.ipynb
+++ b/ew2021/conclusion.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Conclusions, Kudos and last warnings\n",
     "\n",
@@ -16,12 +20,20 @@
     "  * Grab image from industrial camera, feed into (HDL-simulated) JPEG encoder\n",
     "    (See [Virtual Hardware JPEG encoding](https://section5.ch/index.php/2012/10/25/virtual-hardware-jpeg-encoding/))\n",
     "* Sustainable: Docker containers usable for the next *N* years without licensing issues\n",
-    "* Continuous integration: Automatically get your (virtual) hardware tested/verified in the cloud\n",
-    "\n",
+    "* Continuous integration: Automatically get your (virtual) hardware tested/verified in the cloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### In house projects in effect\n",
     "\n",
     "Ongoing (mostly successful) synthesis verification of:\n",
-    "\n",
     "* CPU cores written in MyHDL:\n",
     "  * [ZPUng](https://section5.ch/?s=ZPUng) - a pipelined ZPU architecture with optimum code density\n",
     "  * pyrv32 - a RISC-V (rv32i) compatible CPU core\n",
@@ -32,16 +44,17 @@
     "    * DCT/Wavelet encoder pipelines using Microcode applets\n",
     "* Evaluating novel FPGA architectures\n",
     "    * Procedural creation of cascaded multipliers (CNN)\n",
-    "    * Verification of synthesis prototypes for new FPGA architectures\n",
-    "\n",
-    "## Kudos\n",
-    "\n",
-    "* [MyHDL](http://myhdl.org/) inventor Jan Decaluwe and supporters\n",
-    "* [yosys authors](http://www.clifford.at/yosys/) (Claire Wolf, et al)\n",
-    "* [Dockerhub hosting](https://hub.docker.com/)\n",
-    "* The Google Team for the [Binder service](https://mybinder.org/)\n",
-    "* All other OpenSource affine providers such as [github](https://github.com), [gitlab](https://gitlab.com/), ...\n",
-    "\n",
+    "    * Verification of synthesis prototypes for new FPGA architectures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Warnings\n",
     "\n",
     "* MyHDL simulator limitations: Always co-simulate.\n",
@@ -51,10 +64,37 @@
     "* If you still really want to use it 'industrially':\n",
     "  * **Always** rely on the Docker container setup\n",
     "  * Get a custom container set up for a specific project\n",
-    "  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Kudos\n",
+    "\n",
+    "* [MyHDL](http://myhdl.org/) inventor Jan Decaluwe and supporters\n",
+    "* [yosys authors](http://www.clifford.at/yosys/) (Claire Wolf, et al)\n",
+    "* [Dockerhub hosting](https://hub.docker.com/)\n",
+    "* The Google Team for the [Binder service](https://mybinder.org/)\n",
+    "* All other OpenSource affine providers such as [github](https://github.com), [gitlab](https://gitlab.com/), ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Finale\n",
     "\n",
-    "* Thanks for attending this fully 'digital' meeting\n",
+    "* Thanks for attending this fully 'digital' session\n",
     "* Questions (Chat-Sidebar)\n",
     "* Contact:\n",
     "\n",
@@ -63,6 +103,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -79,6 +120,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "livereveal": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
