--- a/ew2021/cosim_intro.ipynb
+++ b/ew2021/cosim_intro.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Co-Simulation: Verification against 'known good'\n",
     "\n",
@@ -15,23 +19,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Toolchain flow"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "hide_input": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Toggle Code\"></form>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "image/svg+xml": [
@@ -165,19 +172,17 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f81dc1dbf28>"
+       "<graphviz.dot.Digraph at 0x7fc1684637f0>"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import config\n",
     "\n",
     "from graphviz import Digraph\n",
-    "from hidecode import toggle_code\n",
     "\n",
     "dot = Digraph(\"Schematic\")\n",
     "dot.attr('node', shape='parallelogram')\n",
@@ -197,23 +202,39 @@
     "dot.edge('A', 'Y', color='red')\n",
     "dot.edge('A', 'v', color='green')\n",
     "\n",
-    "toggle_code()\n",
-    "dot"
+    "display(dot)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### Next: [Co-Simulation hands-on](cosim.ipynb)\n",
-    "\n",
+    "### Next: [Co-Simulation hands-on](cosim.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
     "Before continuing, we make sure to have the technology mapping files installed:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -242,6 +263,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -258,6 +280,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "livereveal": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
