--- a/ew2021/index.ipynb
+++ b/ew2021/index.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "![Presentation Embedded World 2021 DIGITAL](https://file-service.nuernbergmesse.de/cmsfile/105/41/d3fab217-0ebd-11eb-8b50-005056a097eb--data/;v11;w980.jpg)\n",
+    "![Presentation Embedded World 2021 DIGITAL](https://file-service.nuernbergmesse.de/cmsfile/105/41/d3fab217-0ebd-11eb-8b50-005056a097eb--data/;v11;w980.jpg) ![logo](section5.png)\n",
     "\n",
-    "# jupyosys - from Browser to Silicon (in seconds)"
+    "# jupyosys - from Browser to Silicon (in seconds)\n",
+    "\n",
+    "alias: Rapid hardware design using Python/MyHDL\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "jupyosys: a marriage of Jupyter Notebooks with the OpenSource synthesis [yosys](http://www.clifford.at/yosys/)\n",
+    "**jupyosys**: a marriage of Jupyter Notebooks with the OpenSource synthesis [yosys](http://www.clifford.at/yosys/)\n",
     "\n",
     "Featuring:\n",
     "* Hardware design, (co-)simulation using Python/MyHDL\n",
@@ -25,7 +36,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "#### Start yourself\n",
+    "\n",
+    "* Go to [https://github.com/hackfin/hdlplayground](https://github.com/hackfin/hdlplayground)\n",
+    "* Hit 'launch binder' button"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Jupyter Notebooks\n",
     "\n",
@@ -38,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello (Embedded) World\n"
+      "Hello (new) World\n"
      ]
     }
    ],
@@ -54,29 +83,87 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "box = (1, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Retrieve value of `box` at a later time:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# General HDL work flow aspects\n",
     "\n",
     "## Paradigm changes\n",
     "\n",
-    "### Wiring up logic\n",
-    "..like 74xx TTL:\n",
+    "Wiring up logic .. like 74xx TTL:\n",
     "\n",
     "<div>\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/c/c6/TexasInstruments_7400_chip%2C_view_and_element_placement.jpg\" width=\"300\"/>\n",
-    "</div>\n",
-    "\n",
-    "### Describe a behaviour\n",
-    "\n",
-    "..like a program"
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "as opposed to describing a behaviour:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "from myhdl import *\n",
@@ -91,24 +178,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hide_input": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
-    "Describing behaviour implies: **Simulation**"
+    "Implies: **Simulation**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "## Daily practical engineering\n",
-    "\n",
-    "1. Check out a project via `git clone`\n",
-    "2. Edit/create a hardware description in MyHDL\n",
-    "   (or upload a Verilog/VHDL design)\n",
-    "3. Simulate, verify\n",
-    "4. Synthesize (or co-verify) and download into hardware\n",
-    "5. Commit your changes via git\n",
-    "\n",
+    "There's a crucial difference to VHDL/Verilog. Do you spot it?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Synthesis process\n",
     "\n",
     "1. Pass a design hierarchy to the synthesis tool (here: **yosys**)\n",
@@ -117,49 +215,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
-    "scrolled": false
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Schematic flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "hide_input": true,
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <script>\n",
-       "    function code_toggle() {\n",
-       "        if ($('div.cell.code_cell.rendered.selected div.input').css('display')!='none'){\n",
-       "            $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-       "        } else {\n",
-       "            $('div.cell.code_cell.rendered.selected div.input').show();\n",
-       "        }\n",
-       "    }\n",
-       "    </script>\n",
-       "\n",
-       "\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Toggle Code\"></form>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Toggle Code\"></form>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "image/svg+xml": [
@@ -294,10 +370,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fdec803cf28>"
+       "<graphviz.dot.Digraph at 0x7fb58a09bf60>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +381,6 @@
    "source": [
     "from graphviz import Digraph\n",
     "import sys ; sys.path.append(\"../utils\")\n",
-    "from hidecode import toggle_code\n",
     "\n",
     "dot = Digraph(\"Schematic\")\n",
     "dot.attr('node', shape='parallelogram')\n",
@@ -332,13 +407,16 @@
     "\n",
     "dot.edges(['sr', 'rv', 'rM', 'Mn', 'Mm', 'nP', 'Pb', 'VM'])\n",
     "\n",
-    "toggle_code()\n",
     "dot"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Let's go create hardware!**\n",
     "\n",
@@ -347,7 +425,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Table of contents\n",
     "\n",
@@ -358,7 +440,7 @@
     "0. [Black boxes](blackbox.ipynb) - Handling external Verilog/VHDL modules and black box IP (net lists)\n",
     "0. Hardware programming tool flow - Synthesis examples for Lattice ECP5 FPGA\n",
     "   1. [Setup](hwprog_setup.ipynb) - Installing the tools\n",
-    "   1. [PLL featured Blinky](blinky.ipynb) - Blinky demo\n",
+    "   1. [Blinky](blinky.ipynb) - Blinky demo using on-chip oscillator\n",
     "   0. [UART loopback](uart_loopback_test.ipynb) - A (non-dumb) UART loopback design\n",
     "0. [Auto-Testing](../index.ipynb#Automated-notebook-tests) - Automated testing of notebook code\n",
     "0. [Conclusions, Kudos, and last warnings](conclusion.ipynb)"
@@ -366,7 +448,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "## Updating installation\n",
     "\n",
@@ -377,7 +463,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -394,7 +484,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "! git pull"
@@ -403,7 +497,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "! python3 setup.py install --user 1&2> /dev/null"
@@ -411,6 +509,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -427,6 +526,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "livereveal": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
