--- a/ew2021/simple_logic.ipynb
+++ b/ew2021/simple_logic.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "tags": [
      "english"
     ]
@@ -13,15 +16,33 @@
     "This example takes an input value and performs an exclusive or with the value `0xaa`, or the bit sequence `10101010` (MSB first).\n",
     "\n",
     "Gate level display of `XOR` combinatorial logic (**not generated**!)\n",
-    "![XOR gate](https://www.electronicshub.org/wp-content/uploads/2015/07/exor-equivalent-circuit.jpg)\n",
+    "![XOR gate](https://www.electronicshub.org/wp-content/uploads/2015/07/exor-equivalent-circuit.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": [
+     "english"
+    ]
+   },
+   "source": [
+    "## Design stage\n",
     "\n",
-    "## Design stage"
+    "Let's write some simple code:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "from myhdl import *\n",
@@ -37,7 +58,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### Question\n",
     "\n",
@@ -47,6 +72,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "tags": [
      "english"
     ]
@@ -59,8 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -91,6 +123,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
     "tags": [
      "english"
     ]
@@ -103,8 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -149,7 +188,7 @@
        "<polyline fill=\"none\" stroke=\"#000000\" points=\"167.2884,-68 194.2884,-68 \"/>\n",
        "<text text-anchor=\"middle\" x=\"180.7884\" y=\"-52.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">B</text>\n",
        "<polyline fill=\"none\" stroke=\"#000000\" points=\"194.2884,-45 194.2884,-91 \"/>\n",
-       "<text text-anchor=\"middle\" x=\"218.7884\" y=\"-71.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">$2</text>\n",
+       "<text text-anchor=\"middle\" x=\"218.7884\" y=\"-71.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">$6</text>\n",
        "<text text-anchor=\"middle\" x=\"218.7884\" y=\"-56.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">$xor</text>\n",
        "<polyline fill=\"none\" stroke=\"#000000\" points=\"243.2884,-45 243.2884,-91 \"/>\n",
        "<text text-anchor=\"middle\" x=\"256.2884\" y=\"-64.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Y</text>\n",
@@ -200,7 +239,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f3260259048>"
+       "<graphviz.files.Source at 0x7f64a8271fd0>"
       ]
      },
      "metadata": {},
@@ -216,7 +255,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Compare to VHDL/Verilog\n",
     "\n",
@@ -227,8 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "clk = Signal(bool())\n",
@@ -237,15 +284,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "2. Instance the design unit:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -258,10 +313,10 @@
     {
      "data": {
       "text/plain": [
-       "<myhdl._block._Block at 0x7f3260249e48>"
+       "<myhdl._block._Block at 0x7f64a8271240>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,15 +328,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "We observe this has created a few VHDL files:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -296,9 +359,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Dump the VHDL design output file:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -306,16 +384,12 @@
      "text": [
       "-- File: test.vhd\r\n",
       "-- Generated by MyHDL 0.11\r\n",
-      "-- Date: Sun Jan 24 21:27:27 2021\r\n",
-      "\r\n",
-      "\r\n",
+      "-- Date: Mon Jan 25 09:30:48 2021\r\n",
       "library IEEE;\r\n",
       "use IEEE.std_logic_1164.all;\r\n",
       "use IEEE.numeric_std.all;\r\n",
       "use std.textio.all;\r\n",
-      "\r\n",
       "use work.pck_myhdl_011.all;\r\n",
-      "\r\n",
       "entity test is\r\n",
       "    port (\r\n",
       "        clk: in std_logic;\r\n",
@@ -323,34 +397,24 @@
       "        b: out unsigned(7 downto 0)\r\n",
       "    );\r\n",
       "end entity test;\r\n",
-      "\r\n",
-      "\r\n",
       "architecture MyHDL of test is\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
       "begin\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
-      "\r\n",
       "b <= (a xor to_unsigned(170, 8));\r\n",
-      "\r\n",
       "end architecture MyHDL;\r\n"
      ]
     }
    ],
    "source": [
-    "!cat test.vhd"
+    "! grep \"\\S\" test.vhd"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Exercise: Going synchronous\n",
     "\n",
@@ -367,6 +431,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -383,6 +448,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "livereveal": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
