--- a/index.ipynb
+++ b/index.ipynb
@@ -256,29 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "NB force regen: True\n",
-      "rootdir: /tmp/tmp3in0xqzv, inifile: pytest.ini\n",
-      "plugins: notebook-0.6.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
-      "\n",
-      "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[uart_loopback_test.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m           [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m\u001b[1m========================== 3 passed in 126.29 seconds ==========================\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%pytest -v --color=yes --disable-warnings --nb-exec-timeout 50 --nb-force-regen\n",
     "\n",
@@ -306,8 +286,35 @@
     "import ew2021\n",
     "import tempfile\n",
     "\n",
-    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"uart_loopback_test.ipynb\" ]\n",
-    "\n",
+    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"uart_loopback_test.ipynb\" ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "NB force regen: True\n",
+      "rootdir: /tmp/tmp3in0xqzv, inifile: pytest.ini\n",
+      "plugins: notebook-0.6.1\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
+      "\n",
+      "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[uart_loopback_test.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m           [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m\u001b[1m========================== 3 passed in 126.29 seconds ==========================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
     "@pytest.mark.parametrize(\"uut\", VERIFIED)\n",
     "def test_generic(nb_regression, uut):\n",
     "    with importlib_resources.path(ew2021, uut) as path:\n",
