Minor link fixes for upstream, structure mods

--- a/ew2021/blackbox.ipynb
+++ b/ew2021/blackbox.ipynb
@@ -32,10 +32,11 @@
     "\n",
     "Strategy of **Divide et impera**:\n",
     "  * Give developer maximum control over what logic should be created\n",
-    "  * ..while providing means to preserve portability\n",
+    "  * ... while providing means to preserve portability\n",
     "  * Target abstraction: Separate target parameters and implementation rules from design\n",
     "  * ... but keep code in one place\n",
-    "  * Allow to switch target using one configuration variable"
+    "  * Allow to switch target using one configuration variable\n",
+    "  * ... or by calling an implementation method"
    ]
   },
   {
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "hide_input": true,
     "init_cell": true,
@@ -242,6 +243,8 @@
    "source": [
     "### Example 'opcode' register:\n",
     "\n",
+    "![opcode](bitfield.png)\n",
+    "\n",
     "Define a bit field 'inline' object:"
    ]
   },
@@ -268,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -467,7 +470,8 @@
    "metadata": {
     "code_folding": [
      13,
-     42
+     24,
+     37
     ],
     "slideshow": {
      "slide_type": "slide"
@@ -511,7 +515,7 @@
     "\n",
     "        raise StopSimulation\n",
     " \n",
-    "    @always(delay(2))\n",
+    "     @always(delay(2))\n",
     "    def clkgen():\n",
     "        clk.next = not clk\n",
     "\n",
