--- a/ew2021/hwprog_setup.ipynb
+++ b/ew2021/hwprog_setup.ipynb
@@ -6,6 +6,30 @@
    "source": [
     "# Set up hardware programming\n",
     "\n",
+    "## Installing myhdl synthesis auxiliary packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'myhdl-synthesis' already exists and is not an empty directory.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! WORK=$HOME/work && [ -e $WORK ] || mkdir $WORK && cd $WORK && git clone https://gitlab.com/hackfin/myhdl-synthesis.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installing the PnR tools\n",
     "\n",
     "This command installs the PnR tools for the Lattice ECP5 target"
