--- a/ew2021/index.ipynb
+++ b/ew2021/index.ipynb
@@ -42,10 +42,11 @@
     }
    },
    "source": [
-    "#### Start yourself\n",
+    "#### Play on your own\n",
     "\n",
-    "* Go to [https://github.com/hackfin/hdlplayground](https://github.com/hackfin/hdlplayground)\n",
-    "* Hit 'launch binder' button"
+    "* Go to [https://github.com/hackfin/hdlplayground/tree/ew2021](https://github.com/hackfin/hdlplayground/tree/ew2021)\n",
+    "* Hit 'launch binder' button\n",
+    "* Be patient, it may take a few minutes to start"
    ]
   },
   {
@@ -462,21 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/pyosys/src/myhdl/myhdl-yosys\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd /home/pyosys/src/myhdl/myhdl-yosys/"
    ]
@@ -486,7 +479,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "notes"
     }
    },
    "outputs": [],
@@ -499,7 +492,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "notes"
     }
    },
    "outputs": [],
