--- a/index.ipynb
+++ b/index.ipynb
@@ -18,6 +18,10 @@
     "* [VHDL](#VHDL-support) (simulation and synthesis using GHDL)\n",
     "* [MyHDL](#MyHDL-support) (through jupyosys)\n",
     "\n",
+    "See also:\n",
+    "\n",
+    "* [Presentation](ew2021/index.ipynb) for embedded world conference 2021 digital\n",
+    "\n",
     "Automated testing of notebook is integrated [below](#Automated-notebook-tests)."
    ]
   },
@@ -171,13 +175,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* [Presentation](ew2021/index.ipynb) for embedded world conference 2021 digital"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Complex SoC design auxiliaries\n",
     "\n",
     "Large projects may require some framework to keep the maintenance overhead low, while having dependencies resolved during continous integration builds. This has lead to a few developments with respects to abstract property aware description languages.\n",
@@ -223,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,14 +248,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running the test suite"
+    "### Running the test suite\n",
+    "\n",
+    "Make sure some auxiliary files are installed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'myhdl-synthesis'...\n",
+      "remote: Enumerating objects: 71, done.\u001b[K\n",
+      "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (71/71), done.\u001b[K\n",
+      "remote: Total 807 (delta 42), reused 0 (delta 0), pack-reused 736\u001b[K\n",
+      "Receiving objects: 100% (807/807), 1.94 MiB | 3.58 MiB/s, done.\n",
+      "Resolving deltas: 100% (569/569), done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! WORK=$HOME/work && [ -e $WORK ] || mkdir $WORK && cd $WORK && git clone https://gitlab.com/hackfin/myhdl-synthesis.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
+      "cachedir: .pytest_cache\n",
+      "NB force regen: True\n",
+      "rootdir: /tmp/tmpz42lz_19, inifile: pytest.ini\n",
+      "plugins: notebook-0.6.1\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
+      "\n",
+      "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[uart_loopback_test.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m           [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m\u001b[1m========================== 3 passed in 113.91 seconds ==========================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%%pytest -v --color=yes --disable-warnings --nb-exec-timeout 50 --nb-force-regen\n",
     "\n",
@@ -280,45 +322,18 @@
     "import sys\n",
     "import importlib_resources\n",
     "\n",
-    "sys.path.append(\"/home/pyosys/hdlplayground\")\n",
+    "sys.path.append(\"/home/pyosys/work\")\n",
     "\n",
     "import pytest\n",
     "import ew2021\n",
     "import tempfile\n",
     "\n",
-    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"uart_loopback_test.ipynb\" ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "NB force regen: True\n",
-      "rootdir: /tmp/tmp3in0xqzv, inifile: pytest.ini\n",
-      "plugins: notebook-0.6.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
-      "\n",
-      "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[uart_loopback_test.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m           [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m\u001b[1m========================== 3 passed in 126.29 seconds ==========================\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
+    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"uart_loopback_test.ipynb\" ]\n",
+    "\n",
     "@pytest.mark.parametrize(\"uut\", VERIFIED)\n",
     "def test_generic(nb_regression, uut):\n",
     "    with importlib_resources.path(ew2021, uut) as path:\n",
-    "        nb_regression.check(str(path))                           "
+    "        nb_regression.check(str(path))                "
    ]
   },
   {
