--- a/ew2021/cosim.ipynb
+++ b/ew2021/cosim.ipynb
@@ -11,7 +11,7 @@
     "# Co-Simulation: A real world example\n",
     "\n",
     "1. We translate/synthesize a design and output Verilog at different stages:\n",
-    "   1. Before mapping to a Technology\n",
+    "   1. After translation to the RTL intermediate representation\n",
     "   2. After mapping to a specific FPGA technology (ECP5)\n",
     "2. We verify the functional MyHDL model against the synthesized output"
    ]
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "hide_input": true,
     "init_cell": true
@@ -261,7 +261,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f7de166b668>"
+       "<graphviz.dot.Digraph at 0x7f36153c9ac8>"
       ]
      },
      "execution_count": 5,
@@ -469,7 +469,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f7de155db00>"
+       "<graphviz.files.Source at 0x7f3615277080>"
       ]
      },
      "metadata": {},
@@ -496,7 +496,7 @@
    "execution_count": 8,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "code_folding": [
      8,
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "cell_style": "center",
     "hide_input": true
@@ -680,7 +680,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "cell_style": "center",
     "hide_input": true
@@ -714,7 +714,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
